error.txt
Traceback (most recent call last):
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf/pytree/pytree_utils.py", line 113, in ParseCodeToTree
    tree = parser_driver.parse_string(code, debug=False)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf_third_party/_ylib2to3/pgen2/driver.py", line 187, in parse_string
    return self.parse_tokens(tokens, debug)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf_third_party/_ylib2to3/pgen2/driver.py", line 156, in parse_tokens
    if p.addtoken(type, value, (prefix, start)):
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf_third_party/_ylib2to3/pgen2/parse.py", line 230, in addtoken
    return self._addtoken(ilabel, type, value, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf_third_party/_ylib2to3/pgen2/parse.py", line 313, in _addtoken
    raise ParseError('bad input', type, value, context)
yapf_third_party._ylib2to3.pgen2.parse.ParseError: bad input: type=20, value='<', context=('', (1, 5))

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf/yapflib/yapf_api.py", line 198, in FormatCode
    tree = pytree_utils.ParseCodeToTree(unformatted_source)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf/pytree/pytree_utils.py", line 116, in ParseCodeToTree
    ast.parse(code)
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    Path=<class 'pathlib.Path'>
         ^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmengine/mmengine/config/config.py", line 1484, in pretty_text
    text, _ = FormatCode(text, style_config=yapf_style)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users_test/miniconda3/envs/abc/lib/python3.12/site-packages/yapf/yapflib/yapf_api.py", line 201, in FormatCode
    raise errors.YapfError(errors.FormatErrorMsg(e))
yapf.yapflib.errors.YapfError: <unknown>:1:6: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmseg_olmoearth_2m/projects/DINOv3/../../tools/train.py", line 104, in <module>
    main()
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmseg_olmoearth_2m/projects/DINOv3/../../tools/train.py", line 93, in main
    runner = Runner.from_cfg(cfg)
             ^^^^^^^^^^^^^^^^^^^^
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmengine/mmengine/runner/runner.py", line 462, in from_cfg
    runner = cls(
             ^^^^
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmengine/mmengine/runner/runner.py", line 403, in __init__
    self._log_env(env_cfg)
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmengine/mmengine/runner/runner.py", line 2388, in _log_env
    self.logger.info(f'Config:\n{self.cfg.pretty_text}')
                                 ^^^^^^^^^^^^^^^^^^^^
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmengine/mmengine/config/config.py", line 1489, in pretty_text
    raise SyntaxError('Failed to format the config file, please '
SyntaxError: Failed to format the config file, please check the syntax of: 
